<resources>
    <string name="app_name">HiltInjectionApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="note_list_fragment_label">Note List Fragment</string>
    <string name="note_detail_fragment_label">Detail Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_title">Add title</string>
    <string name="add_description">Add Description</string>
    <string name="title">Title</string>
    <string name="desc">Desc</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="dummy_date">00-00-0000</string>
</resources>